Added TRADE and QUOTE history capture for Alpaca; added recalibration to Alpaca live/paper; removed hashCode and equals statements from JPA entities; added orderId field to CurrencyLedger; made Binance break even method dynamic (no way to test from Ontario); removed maRising logic; cleaned up some logging.